# 3DLocalization

./: .gitignore  MCL-Documentation  README.md  a.txt  index.html  params.json
Data/: README.md
Data/InputData/BirchLab/: InputInfo.txt
Data/InputData/SmallFolder/: InputInfo.txt  InputInfo.txt~
Documentation/: .gitignore  CodeDocumentation  CodeDocumentation.tex  ResearchPaper  ResearchPaper.tex  UserManual
Documentation/Artifacts/: .~lock.FlowChart.odp#  FlowChart.odp  Run1.webm  run.webm  screen.webm
Documentation/CodeDocumentation/: CodeDocumentation.aux  CodeDocumentation.tex  CodeDocumentation.tex.backup  CodeDocumentation.tex~  CodeDocumentation.toc
Documentation/ResearchPaper/: ResearchPaper.fdb_latexmk  ResearchPaper.tex
Documentation/UserManual/: UserManual.tex  manual2.tex
Localization/: CMakeLists.txt  ParticleLists.txt  README.md  package.xml
Localization/ROSTEST/: main.cpp  package.xml
Localization/TestRobot/: CMakeLists.txt  README.md  main.cpp
Localization/src/Boot/: BootUp.h
Localization/src/Boot/Debug/: CMakeLists.txt  CMakeLists.txt~  main.cpp
Localization/src/GUI/: README.md
Localization/src/GUI/MATLAB/: weightgraph.tif  weightovertime.m  weightovertime.m~
Localization/src/GUI/MapViewer/: CMakeLists.txt  Makefile  MapViewer  cmake_install.cmake
Localization/src/GUI/MapViewer/FIXES/BUGS/: BUILD GUIDE
Localization/src/GUI/MapViewer/Inputfiles/: CurrentPoints.txt  PointGenInput.txt
Localization/src/GUI/MapViewer/ProgramDesign/: InputFileFormat
Localization/src/GUI/MapViewer/src/Helper/: HelperStructures.h  MathHelp.cpp  MathHelp.h  Particles.h  SolidSphere.cpp  SolidSphere.h
Localization/src/GUI/MapViewer/src/IO/: ProgramIO.cpp  ProgramIO.h
Localization/src/GUI/MapViewer/src/Main/: main.cpp
Localization/src/GUI/MapViewer/src/Rendering/: Render.cpp  Render.h
Localization/src/GUI/MapViewer/src/Shaders/: Shader.frag  Shader1.frag  Shader1.vert  ShaderFunctions.cpp  ShaderFunctions.h
Localization/src/GUI/Meta/: MetaData.txt  Viewer.py  WeightOverTime.py  createTrace.py
Localization/src/GUI/PCLViewer/: CMakeLists.txt  Viewer.cpp
Localization/src/GUI/PyViewer/: ParticleListFile.txt  ParticleLists.txt  ParticleLists.txt~  Viewer.py
Localization/src/HelperStructs/: Characterizer.h  Perspective.h
Localization/src/Helpers/: Characterizer.h  Perspective.h
Localization/src/Helpers/Globals/: Globals.cpp  Globals.h
Localization/src/IO/: ProgramIO.cpp  ProgramIO.h  README.md
Localization/src/IO/Debug/: CMakeLists.txt  main.cpp
Localization/src/MCL/: README.md
Localization/src/MCL/ActiveParticles/: ActiveParticles.cpp  ActiveParticles.h  ParticleListFile.txt
Localization/src/MCL/ActiveParticles/Debug/: CMakeLists.txt  main.cpp
Localization/src/MCL/Control/: Controller.cpp  Controller.h  README.md
Localization/src/MCL/Matching/: Matching.cpp  Matching.h
Localization/src/MCL/ParticleAnalysis/: Matching.h  ParticleControl.h  README.md
Localization/src/Main/: Main.cpp  README.md
Localization/src/Model/: README.md
Localization/src/Particle/: Particle.cpp  Particle.h
Localization/src/Particle/Debug/: .gitignore
Localization/src/Robot/: RobotIO.cpp  RobotIO.h  RobotState.cpp  RobotState.h
PreLocalization/: README.md
PreLocalization/DatabaseGen/: CMakeLists.txt  CMakeLists.txt~
PreLocalization/DatabaseGen/src/: AverageImage.h  CreateDB.cpp
PreLocalization/PerspectiveGenerator/: CMakeCache.txt  CMakeLists.txt
PreLocalization/PerspectiveGenerator/Inputfiles/: BirchInput.txt  CurrentPoints.txt  PointGenInput.txt
PreLocalization/PerspectiveGenerator/ProgramDesign/: InputFileFormat
PreLocalization/PerspectiveGenerator/src/Helper/: MathHelp.cpp  MathHelp.h
PreLocalization/PerspectiveGenerator/src/IO/: ProgramIO.cpp  ProgramIO.h
PreLocalization/PerspectiveGenerator/src/Main/: main.cpp
PreLocalization/PerspectiveGenerator/src/Rendering/: Render.cpp  Render.h
